@@ -9,7 +9,10 @@ What's New in IDLE 2.6a3?
 - Home / Control-A toggles between left margin and end of leading white
   space.  Patch 1196903 Jeff Shute.
 
-- Improved AutoCompleteWindow logic.  Patch 2062 Tal Einat.  
+- Improved AutoCompleteWindow logic.  Patch 2062 Tal Einat.
+
+- Autocompletion of filenames now support alternate separators, e.g. the
+  '/' char on Windows.  Patch 2061 Tal Einat.
 
 What's New in IDLE 2.6a1?
 =========================
